[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photomap"
version = "0.1.0"
description = "Photomap processing scripts for image analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "vrutten", email = "gin.rutten@gmail.com"}
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "scikit-image>=0.18.0",
    "tifffile>=2021.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["photomap*"]

